--- a/ASyncLabel/ImageMagick/Base.lproj/Main.storyboard
+++ b/ASyncLabel/ImageMagick/Base.lproj/Main.storyboard
@@ -12,26 +12,26 @@
         <!--View Controller-->
         <scene sceneID="4pM-EM-aPz">
             <objects>
-                <collectionViewController id="WwL-io-6vK" customClass="ViewController" sceneMemberID="viewController">
+                <collectionViewController id="WwL-io-6vK" customClass="GSViewController" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="cAN-fJ-ngn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0Bx-ql-bml" customClass="TestFlowLayout">
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0Bx-ql-bml" customClass="GSTestFlowLayout">
                             <size key="itemSize" width="375" height="3000"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="tYa-ul-5lr" customClass="TestViewCell">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="tYa-ul-5lr" customClass="GSTestViewCell">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="3000"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="3000"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JFn-JQ-S1F" customClass="RCEAsyncLabel">
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JFn-JQ-S1F" customClass="GSAsyncLabel">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="3000"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </view>
