问题: a little progress 原因: 解决方案: Reviewer: 工单号: X Log: X

--- a/AudioEngine/AudioEngine/Base.lproj/Main.storyboard
+++ b/AudioEngine/AudioEngine/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="b0K-OM-2Pa">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="b0K-OM-2Pa">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -64,6 +64,17 @@
                     </view>
                     <navigationItem key="navigationItem" id="L8s-Zh-DHF">
                         <nil key="title"/>
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="WiV-sW-IiK">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="A8J-hE-bxP">
+                                <rect key="frame" x="20" y="11" width="19" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="speaker" catalog="system"/>
+                                <state key="selected" image="speaker.slash" catalog="system"/>
+                                <connections>
+                                    <action selector="switchSpeaker:" destination="BYZ-38-t0r" eventType="touchUpInside" id="X3D-hw-vaA"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" style="plain" id="8g9-gf-dWj">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="FsJ-Z0-ncA">
                                 <rect key="frame" x="350" y="0.0" width="44" height="44"/>
@@ -102,6 +113,8 @@
     </scenes>
     <resources>
         <image name="play" catalog="system" width="60" height="64"/>
+        <image name="speaker" catalog="system" width="64" height="60"/>
+        <image name="speaker.slash" catalog="system" width="64" height="62"/>
         <image name="xmark" catalog="system" width="64" height="56"/>
     </resources>
 </document>
